applications/home-assistant/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  ports:
  - port: 80
    name: web
    targetPort: 8123
  clusterIP: None
  selector:
    app: home-assistant
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant # has to match .spec.template.metadata.labels
  serviceName: "home-assistant"
  replicas: 1
  template:
    metadata:
      labels:
        app: home-assistant # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: home-assistant
        image: ghcr.io/home-assistant/home-assistant:2021.12
        ports:
        - containerPort: 8123
          name: web
        volumeMounts:
        - name: config
          mountPath: /config
          subPath: home-assistant/
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: nfs
      dnsConfig:  # Fix DNS resolution in Alpine 3.11 https://github.com/gliderlabs/docker-alpine/issues/539
        options:
          - name: ndots
            value: "1"
