applications/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site
  annotations:
spec:
  tls:
  - hosts:
      - hass.jlh.name
    secretName: hass-jlh-name-tls
  rules:
  - host: hass.jlh.name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 80
